# glut-template

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  display_glut.c  display_glut.h  main.c  main.h  math_lib.c  math_lib.h
